Fixed Dropdown Menu flicker on page load

--- a/assets/styles/sass/shared/global.scss
+++ b/assets/styles/sass/shared/global.scss
@@ -523,8 +523,8 @@ main {
     @at-root .dropdown-menu { @content; }
   }
 
-  &[hidden], &:not(.configured) { display: none; }
-  &:not([hidden])               { display: grid; }
+  &[hidden], &:not([hidden]):not(.configured) { display: none; }
+  &:not([hidden])                             { display: grid; }
   &[data-expanded="false"] { opacity: 0; }
   &[data-expanded="true"]  { opacity: 1; }
 
